# rag-from-scratch

./: .gitignore  1.0_Rag_with_own_text.ipynb  2.0_Rag_with_PDF.ipynb  README.md  pyproject.toml  requirements.txt
chroma_db/f0c2acc5-6805-4667-8c8f-d6dee339e823/: index_metadata.pickle
